implemented creating document instance